# advent-of-code-2021

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
cmake/: Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
src/advent_of_code_2021/day1/: CMakeLists.txt  sonar_sweep.cpp  sonar_sweep.hpp  sonar_sweep.test.cpp
src/advent_of_code_2021/day2/: CMakeLists.txt  dive.cpp  dive.hpp  dive.test.cpp
src/advent_of_code_2021/day3/: CMakeLists.txt  binary_diagnostic.cpp  binary_diagnostic.hpp  binary_diagnostic.test.cpp
src/advent_of_code_2021/day4/: CMakeLists.txt  giant_squid.cpp  giant_squid.hpp  giant_squid.test.cpp
src/advent_of_code_2021/day5/: CMakeLists.txt  hydrothermal_venture.cpp  hydrothermal_venture.hpp  hydrothermal_venture.test.cpp
